modules/nat_gateway.tf
# nat gateway
resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway.id
  subnet_id     = aws_subnet.private["az_a"].id
  tags = {
    Name = "study-nat-gateway"
  }
}

# elastic ip
resource "aws_eip" "nat_gateway" {
  domain     = "vpc"
  depends_on = [aws_internet_gateway.igw]
  tags = {
    Name = "study-nat-eip"
  }
}
